--- a/index.html
+++ b/index.html
@@ -1,378 +1,235 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>KnowledgeHub Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple Calculator using html and css</title>
     <meta charset="utf-8" />
-    <meta name="author" name="sheriff baba" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
+
     <script src="jquery-3.6.1.min.js" type="text/javascript"></script>
+
+    <style>
+      * {
+        padding: 0px;
+        margin: 0px;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: Arial;
+        margin: 0px;
+        padding: 0px;
+      }
+      #calculator {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(53, 39, 39);
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+      }
+      #calculator #screen {
+        height: 40%;
+        background-color: rgb(54, 51, 51);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding-bottom: 50px;
+        width: 100%;
+        padding-right: 50px;
+      }
+      #input_buttons table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      #calculator #input_buttons {
+        height: 60%;
+        width: 100%;
+        display: flex; /*  for stretching for flex-items */
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+      }
+      td {
+        padding: 20px;
+        text-align: center;
+      }
+
+      input[type="button"],
+      button {
+        border: none;
+        font-size: 40px;
+        text-align: center;
+        outline: none;
+        border: none;
+        background-color: inherit;
+      }
+
+      input#display {
+        border: none;
+        text-align: right;
+        background-color: inherit;
+        color: white;
+        font-size: 50px;
+        outline: none;
+        width: 100%;
+
+        padding-bottom: 20px;
+      }
+      input#result {
+        border: none;
+        text-align: right;
+        background-color: inherit;
+        font-size: 30px;
+        color: #fff;
+        outline: none;
+        width: 100%;
+      }
+
+      input#display.equal2 {
+        transition: transform 1s, opacity 1s;
+        -webkit-transition: opacity 1s, transform 1s; /* for safari */
+        opacity: 0;
+        transform: translate(-50px, -200px);
+        -webkit-transform: translate(-50px, -200px); /* for safari */
+        -ms-transform: translate(-50px, -200px); /* for IE 9 */
+      }
+      input#result.equal {
+        transition: font-size 1s, transform 1s;
+        -webkit-transition: font-size 1s, transform 1s; /* for safari */
+        font-size: 50px;
+        transform: translate(-30px, -80px);
+        -webkit-transform: translate(-30px, -80px); /* for safari */
+        -ms-transform: translate(-30px, -80px); /* for IE 9 */
+      }
+      input#equal {
+        background-color: green;
+        color: white;
+        padding: 20px;
+        border-radius: 10px;
+        height: 130px;
+      }
+      input.green,
+      button.green {
+        color: green;
+      }
+      input.white {
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <!-- navigation -->
-    <nav>
-      <div class="logo_container">
-        <img src="logo3.png" alt="KnowledgeHub logo" />
-        <h3 id="hub1">knowledge hub</h3>
-      </div>
-      <div class="navigation">
-        <ul>
-          <i class="fas fa-times" id="menu_close"></i>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Courses</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <i class="fas fa-bars" id="menu_btn"></i>
-      </div>
-    </nav>
-    <!-- Section -->
-    <section id="home">
-      <h2>Enhance Your Future With KnowledgeHub</h2>
-      <p>
-        <q>
-          Embark on an exciting journey of discovery and unlock the limitless
-          possibilities of knowledge as we empower you to engage, ignite your
-          curiosity, and transform your learning experience into a captivating
-          and enriching adventure, where you can explore new horizons, dive into
-          fascinating subjects, unleash your full potential, and master the
-          skills that will propel you towards a future filled with success and
-          innovations.</q
-        >
-      </p>
-      <div class="btn">
-        <a href="#" class="blue">Learn More</a>
-        <a href="#" class="yellow">Visit Courses</a>
-      </div>
-    </section>
+    <div id="calculator">
+      <div id="screen">
+        <input type="text" id="display" placeholder="0" class="screen_color" />
 
-    <!-- features -->
-    <section id="features">
-      <h1>Awesome Features</h1>
-      <p>Replenish man have thing gathering lighs yielding shall you</p>
-      <div class="fea-base">
-        <div class="fea-box">
-          <i class="fas fa-graduation-cap"></i>
-          <h3>Scholarship Facility</h3>
-          <p>
-            one make creepeth, man bearing theira firmanent won't make heaven
-          </p>
-        </div>
-        <div class="fea-box">
-          <i class="fas fa-certificate"></i>
-          <h3>Dell Online Courses</h3>
-          <p>
-            one make creepeth, man bearing theira firmanent won't make heaven
-          </p>
-        </div>
-        <div class="fea-box">
-          <i class="fas fa-award"></i>
-          <h3>Global Certification</h3>
-          <p>
-            one make creepeth, man bearing theira firmanent won't make heaven
-          </p>
-        </div>
+        <input type="text" id="result" readonly />
       </div>
-    </section>
+      <div id="input_buttons">
+        <table>
+          <!-- first row -->
+          <tr>
+            <td>
+              <input type="button" value="C" id="clear" class="green" />
+            </td>
+            <td>
+              <input type="button" value="/" class="green num" />
+            </td>
+            <td>
+              <input type="button" value="*" class="green num" />
+            </td>
+            <td>
+              <button type="button" id="del" class="green">
+                <i class="fas fa-backspace"></i>
+              </button>
+            </td>
 
-    <!-- Courses -->
-    <section id="course">
-      <h1>Our Popular Courses</h1>
-      <p>Replenish man have thing gathering lighs yielding shall you</p>
-      <!-- The course box -->
-      <div class="course-box">
-        <!-- Courses div -->
-        <div class="courses">
-          <img src="JavaScript.jpeg" alt="javascipt image" />
-          <!-- details div -->
-          <div class="details">
-            <span>Updated 05/06/2023</span>
-            <h6>Javascipt Beginners Course</h6>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span>(239)</span>
-            </div>
-          </div>
-          <div class="cost">$49.9</div>
-        </div>
-        <div class="courses">
-          <img src="html and css.jpeg" alt="html&css image" />
-          <!-- details div -->
-          <div class="details">
-            <span>Updated 05/06/2023</span>
-            <h6>HTML AND CSS Beginners Course</h6>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span>(239)</span>
-            </div>
-          </div>
-          <div class="cost">$49.9</div>
-        </div>
-        <!-- Another courses div -->
-        <div class="courses">
-          <img src="phyton.jpeg" alt="python image" />
-          <!-- details div -->
-          <div class="details">
-            <span>Updated 05/06/2023</span>
-            <h6>PYTHON Beginners Course</h6>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span>(239)</span>
-            </div>
-          </div>
-          <div class="cost">$49.9</div>
-        </div>
-        <!-- Another courses div -->
-        <div class="courses">
-          <img src="C++.jpeg" alt="javascipt image" />
-          <!-- details div -->
-          <div class="details">
-            <span>Updated 05/06/2023</span>
-            <h6>C++ Beginners Course</h6>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span>(239)</span>
-            </div>
-          </div>
-          <div class="cost">$49.9</div>
-        </div>
-        <!-- Another courses div -->
-        <div class="courses">
-          <img src="download (4).jpeg" alt="C# image" />
-          <!-- details div -->
-          <div class="details">
-            <span>Updated 05/06/2023</span>
-            <h6>C# Beginners Course</h6>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span>(239)</span>
-            </div>
-          </div>
-          <div class="cost">$49.9</div>
-        </div>
-        <!-- Another courses div -->
-        <div class="courses">
-          <img src="java.jpeg" alt="java image" />
-          <!-- details div -->
-          <div class="details">
-            <span>Updated 05/06/2023</span>
-            <h6>Java Beginners Course</h6>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span>(239)</span>
-            </div>
-          </div>
-          <div class="cost">$49.9</div>
-        </div>
-      </div>
-    </section>
-    <!-- Registration -->
-    <section id="registration">
-      <div class="reminder">
-        <p>Get 100 Online Courses for Free</p>
-        <h1>Register to get it</h1>
-        <div class="time">
-          <div class="date">
-            18 <br />
-            Days
-          </div>
-          <div class="date">
-            23 <br />
-            Hours
-          </div>
-          <div class="date">
-            06<br />
-            Minutes
-          </div>
-          <div class="date">
-            58 <br />
-            Seconds
-          </div>
-        </div>
-      </div>
-      <div class="form">
-        <form action="#" name="registration" method="get" novalidates>
-          <h3>Create Free Account NOW!</h3>
-          <input type="text" placeholder="Name" required name="name" />
-          <input
-            type="email"
-            placeholder="Email Address"
-            required
-            name="e-mail"
-          />
-          <input
-            type="number"
-            placeholder="Phone Number"
-            required
-            name="number"
-            maxlength="11"
-          />
-          <div class="btn">
-            <a href="#" class="yellow">Submit Form</a>
-          </div>
-        </form>
-      </div>
-    </section>
+            <!-- second row -->
+          </tr>
 
-    <!-- Profiles -->
-    <section id="experts">
-      <h1>Community Experts</h1>
-      <p>Replenish man have thing gathering lighs yielding shall you</p>
-      <div class="expert-box">
-        <div class="profiles">
-          <div class="image_container">
-            <img src="boy-cartoon-face-free-vector.jpg" alt="" />
-          </div>
-          <h6>Sheriff Baba</h6>
-          <p>Python & Algorithm Expert</p>
-          <div class="pro-links">
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-twitter"></i>
-          </div>
-        </div>
-        <div class="profiles">
-          <div class="image_container">
-            <img src="boy-face-avatar-cartoon-free-vector.jpg" alt="" />
-          </div>
-          <h6>Sheriff Baba</h6>
-          <p>C# & Algorithm Expert</p>
-          <div class="pro-links">
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-twitter"></i>
-          </div>
-        </div>
-        <div class="profiles">
-          <div class="image_container">
-            <img src="boy-cartoon-face-free-vector.jpg" alt="" />
-          </div>
-          <h6>Sheriff Baba</h6>
-          <p>C++ & Algorithm Expert</p>
-          <div class="pro-links">
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-twitter"></i>
-          </div>
-        </div>
-        <div class="profiles">
-          <div class="image_container">
-            <img src="boy-face-avatar-cartoon-free-vector.jpg" alt="" />
-          </div>
-          <h6>Sheriff Baba</h6>
-          <p>JavaScript & Algorithm Expert</p>
-          <div class="pro-links">
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-twitter"></i>
-          </div>
-        </div>
+          <tr>
+            <td><input type="button" value="7" class="white num" /></td>
+            <td><input type="button" value="8" class="white num" /></td>
+            <td><input type="button" value="9" class="white num" /></td>
+            <td>
+              <input type="button" value="-" class="green num" />
+            </td>
+          </tr>
+          <!-- third row -->
+          <tr>
+            <td><input type="button" value="4" class="white num" /></td>
+            <td><input type="button" value="5" class="white num" /></td>
+            <td><input type="button" value="6" class="white num" /></td>
+            <td><input type="button" value="+" class="green num" /></td>
+          </tr>
+          <!-- forth row -->
+          <tr>
+            <td><input type="button" value="1" class="white num" /></td>
+            <td><input type="button" value="2" class="white num" /></td>
+            <td><input type="button" value="3" class="white num" /></td>
+            <td rowspan="2">
+              <input type="button" value="&equals;" id="equal" class="green" />
+            </td>
+          </tr>
+          <!-- fifth row -->
+          <tr>
+            <td><input type="button" value="0" class="white num" /></td>
+            <td><input type="button" value="%" class="white num" /></td>
+            <td><input type="button" value="." class="white num" /></td>
+          </tr>
+        </table>
       </div>
-    </section>
-    <!-- footer -->
-    <section id="whole_footer">
-      <div id="footer">
-        <div class="footer-col">
-          <h3>Top Products</h3>
-          <li>Manage Reputation</li>
-          <li>Power Tools</li>
-          <li>Manage Website</li>
-          <li>Marketting Services</li>
-          <li>E-commerce Website</li>
-        </div>
-        <div class="footer-col">
-          <h3>Top Products</h3>
-          <li>Manage Reputation</li>
-          <li>Power Tools</li>
-          <li>Manage Website</li>
-          <li>Marketting Services</li>
-          <li>E-commerce Website</li>
-        </div>
-        <div class="footer-col">
-          <h3>Top Products</h3>
-          <li>Manage Reputation</li>
-          <li>Power Tools</li>
-          <li>Manage Website</li>
-          <li>Marketting Services</li>
-          <li>E-commerce Website</li>
-        </div>
-        <div class="footer-col">
-          <h3>Top Products</h3>
-          <li>Manage Reputation</li>
-          <li>Power Tools</li>
-          <li>Manage Website</li>
-          <li>Marketting Services</li>
-          <li>E-commerce Website</li>
-        </div>
-        <div class="footer-col">
-          <h3>NewsLetter</h3>
-          <p>You can trust us. we only send promo offers</p>
-          <div class="subscribe">
-            <input
-              type="email"
-              name="subscribe"
-              placeholder="Your Email Address"
-              id=""
-            />
-            <a href="#" class="yellow">SUBSCRIBE</a>
-          </div>
-        </div>
-      </div>
-      <div class="copyright">
-        <p>
-          Copyright &copy;2023 All rights reserved | This template is made by
-          Sheriff Baba Tech Company
-        </p>
-        <div class="pro-links">
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-twitter"></i>
-        </div>
-      </div>
-    </section>
-    <!-- Jquery codes -->
+    </div>
+
     <script>
-      $("#menu_btn").click(function () {
-        $("nav .navigation ul").addClass("active");
+      $(".num").click(function () {
+        if ($("#result").hasClass("equal")) {
+          $("#result").removeClass("equal");
+          $("#result").val("");
+        }
+        if ($("#display").hasClass("equal2")) {
+          $("#display").removeClass("equal2");
+          $("#display").val("");
+        }
+        $("#display").val($("#display").val() + this.value);
+        $("#result").val(eval($("#display").val()));
       });
-      $("#menu_close").click(function () {
-        $("nav .navigation ul").removeClass("active");
+      $("#equal").click(function () {
+        $("#result").addClass("equal");
+        $("#display").addClass("equal2");
+        $("#display").attr("placeholder", "");
+      });
+
+      $("#clear").click(function () {
+        if ($("#display").hasClass("equal2")) {
+          $("#display").removeClass("equal2");
+        }
+        if ($("#result").hasClass("equal")) {
+          $("#result").removeClass("equal");
+        }
+        $("#result").val("");
+        $("#display").val("");
+        $("#display").attr("placeholder", "0");
+      });
+
+      $("#del").click(function () {
+        var x = $("#display");
+        var y = $("#result");
+        if (x.hasClass("equal2") && y.hasClass("equal")) {
+          $("#display").removeClass("equal2");
+          $("#result").removeClass("equal");
+        } else {
+          $("#display").val($("#display").val().slice(0, -1));
+        }
+        var value = x.val();
+        if (value !== "0") {
+          $("#result").val(eval($("#display").val()));
+        } else {
+          $("#result").val("");
+        }
       });
     </script>
   </body>
